--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p style="font-size: 20px; margin-top: 0px;">This website has some subtext that goes here under 
                     the main title. It's a smaller font and the color
                     is of a lower contrast</p>
-                <button>Sign Up</button>
+                <button class="button">Sign Up</button>
             </div>
             <div class="header-image">
                 <img src="images/css_html.png">
@@ -66,18 +66,17 @@
 
     
     <div class="call-to-action">
-        <div>
-            <h3>Call to action! It's time!</h3>
-            <p> Sign up for out product by clicking the button right over here</p>
-        </div>
-        <div class="button-call-to-action">
-            <button><a href="#">Sign Up</a></button>
+        <div class="text">
+            <p style="font-size: 20px;">Call to action! It's time!</p>
+            <p style="font-size: 10px;"> Sign up for out product by clicking the button right over here</p>
+            <button class="button-call-to-action"><a href="#">Sign Up</a></button>
         </div>
     </div>
 
-    <footer>
-        <p>Copyright © Syed Hassan Ali Rizvi - Odin Project 2022</p>
-    </footer>
-
+    <div class="footer">
+        <footer>
+            <p>Copyright © Syed Hassan Ali Rizvi - Odin Project 2022</p>
+        </footer>
+    </div>
 </body>
 </html>
