pushing final changes

--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
     
     <div class="call-to-action">
         <div class="text">
-            <p style="font-size: 20px;">Call to action! It's time!</p>
+            <h3 style="font-size: 20px;">Call to action! It's time!</h3>
             <p style="font-size: 10px;"> Sign up for out product by clicking the button right over here</p>
+        </div>
+        <div class="button-action">
             <button class="button-call-to-action"><a href="#">Sign Up</a></button>
         </div>
     </div>
